[issue #39220] Fix sector text truncate

--- a/frontend/src/app/components/hall-viewing/hall-viewing.component.scss
+++ b/frontend/src/app/components/hall-viewing/hall-viewing.component.scss
@@ -214,3 +214,9 @@ h4{
 .zero{
   color: $dark-gray;
 }
+
+.text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
